# cpg-flow-relatedness

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: build_deploy_main.yaml  dev_auto_build.yaml  get_version.py  lint.yaml  test.yaml
src/rd_qc/: config_template.toml  run_workflow.py  stages.py  utils.py
src/rd_qc/jobs/: generate_somalier.py  relate.py
src/rd_qc/scripts/: check_pedigree.py  check_self_relatedness.py
src/workflow_name/: run_workflow.py  stages.py
src/workflow_name/jobs/: DoSomethingGenericWithBash.py  PrintPreviousJobOutputInAPythonJob.py
