[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name='cpg_flow_rd_qc'
description='Somalier Checks and eventually other QC checks for CPG-Flow'
readme = "README.md"
# currently cpg-flow is pinned to this version
requires-python = ">=3.10,<3.12"
version="0.0.1"
license={ "file" = "LICENSE" }
classifiers=[
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]

dependencies=[
    'cpg-flow~=1.3',
]

[project.urls]
Repository = "https://github.com/populationgenomics/cpg-flow-rd-qc"

[project.optional-dependencies]
test = [
    'bump-my-version',
    'pre-commit',
    'pytest',
]

[project.scripts]
run_workflow = 'rd_qc.run_workflow:cli_main'

[tool.hatch.build.targets.wheel]
packages = ["src/rd_qc"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[options]
include_package_data = true

[options.package_data]
'rd_qc'=  ['config_template.toml']

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ['test']

[tool.ruff]
line-length = 120
extend-exclude = ["venv", ".mypy_cache", ".venv", "build", "dist"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# ignore pydocstyle, flake8-boolean-trap (FBT)
select = ["A", "B", "C", "E", "F", "G", "I", "N", "Q", "S", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "ERA", "EXE", "ICN", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "UP", "YTT"]

extend-select = ["I"]

fixable = ["ALL"]

ignore = [
    "ANN001", # Missing type annotation for function argument
    "ANN201", # Missing return type annotation for public function
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "ANN204", # Missing type annotation for special method `__init__`
    "COM812", # Trailing comma prohibited
    "PLW0603", # Using the global statement to update `<VAR>` is discouraged
    "Q000", # Single quotes found but double quotes preferred
    "PLR0913", # Too many arguments in function (> 5)
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = [
    "S101", # Use of assert detected
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "hail", "first-party", "cpg", "local-folder"]

[tool.ruff.lint.isort.sections]
cpg = ["metamist", "cpg_utils", "cpg_flow"]
hail = ["hail"]

[tool.bumpversion]
current_version = "0.1.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version="{current_version}"'
replace = "version='{new_version}'"

[[tool.bumpversion.files]]
filename = "DOCKERFILE"
search = "VERSION={current_version}"
replace = "VERSION={new_version}"

[[tool.bumpversion.files]]
filename = "README.md"
search = "{current_version}"
replace = "{new_version}"
